change: Expand atmospheric fog controls